todo list changes

--- a/ModelViewViewModel/App.xaml
+++ b/ModelViewViewModel/App.xaml
@@ -7,7 +7,8 @@
 
         <Style TargetType="TextBox">
             <Setter Property="Padding" Value="5" />
-            <Setter Property="Height" Value="50" />
+            <Setter Property="Height" Value="30" />
+            <Setter Property="VerticalAlignment" Value="Center" />
 
             <Style.Resources>
                 <Style TargetType="Border">
@@ -17,7 +18,8 @@
         </Style>
 
         <Style TargetType="Button">
-            <Setter Property="Height" Value="50" />
+            <Setter Property="Height" Value="30" />
+            <Setter Property="VerticalAlignment" Value="Center" />
 
             <Style.Resources>
                 <Style TargetType="Border">
@@ -25,6 +27,16 @@
                 </Style>
             </Style.Resources>
         </Style>
-        
+
+        <Style TargetType="Label">
+            <Setter Property="Padding" Value="0" />
+
+            <Style.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="4" />
+                </Style>
+            </Style.Resources>
+        </Style>
+
     </Application.Resources>
 </Application>
