--- a/ModelViewViewModel/MainWindow.xaml
+++ b/ModelViewViewModel/MainWindow.xaml
@@ -4,9 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ModelViewViewModel"
+        xmlns:uc="clr-namespace:ModelViewViewModel.Views"
+        xmlns:vm="clr-namespace:ModelViewViewModel.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+        ResizeMode="NoResize"
+        Title="MainWindow" Height="450" Width="400">
+    <StackPanel>
+        <uc:TodoControl />
+    </StackPanel>
 </Window>
