--- a/ModelViewViewModel/App.xaml
+++ b/ModelViewViewModel/App.xaml
@@ -30,7 +30,17 @@
 
         <Style TargetType="Label">
             <Setter Property="Padding" Value="0" />
+            <Setter Property="Margin" Value="5,0" />
+            <Setter Property="FontSize" Value="13" />
 
+            <Style.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="4" />
+                </Style>
+            </Style.Resources>
+        </Style>
+
+        <Style TargetType="ListView">
             <Style.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="4" />
