--- a/ModelViewViewModel/Views/TodoControl.xaml
+++ b/ModelViewViewModel/Views/TodoControl.xaml
@@ -2,12 +2,21 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:local="clr-namespace:ModelViewViewModel.Views"
              xmlns:vm="clr-namespace:ModelViewViewModel.ViewModels"
              mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="400">
+             d:DesignHeight="400" d:DesignWidth="400">
+    <UserControl.DataContext>
+        <vm:TodoViewModel />
+    </UserControl.DataContext>
     <Grid Margin="5">
+
+        <Grid.Resources>
+            <sys:String x:Key="TodoTitleResourceKey">Enter your todo item:</sys:String>
+            <sys:String x:Key="AddButtonResourceKey">Add</sys:String>
+        </Grid.Resources>
         
         <Grid.RowDefinitions>
             <RowDefinition Height="65" />
@@ -26,15 +35,32 @@
                 <ColumnDefinition Width="100" />
             </Grid.ColumnDefinitions>
 
-            <Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Bottom">
-                <TextBlock Text="Todo title" />
-            </Label>
+            <Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Bottom" Content="{StaticResource TodoTitleResourceKey}" />
 
-            <TextBox Grid.Row="1" Grid.Column="0" x:Name="Title" />
+            <TextBox Grid.Row="1" Grid.Column="0" x:Name="TodoItem" Text="{Binding TodoItem}" />
 
-            <Button Grid.Row="1" Grid.Column="1" Margin="10,0,0,0" Command="{Binding vm:AddCommand}" Content="Add" />
+            <Button Grid.Row="1" Grid.Column="1" Margin="10,0,0,0" Command="{Binding AddCommand}" Content="{StaticResource AddButtonResourceKey}" />
 
         </Grid>
-        
+
+        <ListView Grid.Row="1" Margin="5" ItemsSource="{Binding TodoList}">
+
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Width="30">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <CheckBox IsChecked="false" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Header="Title" Width="100" DisplayMemberBinding="{Binding Title}" />
+                    <GridViewColumn Header="Created" Width="120" DisplayMemberBinding="{Binding CreatedAt}" />
+                    <GridViewColumn Header="Status" Width="125" DisplayMemberBinding="{Binding Status}" />
+                </GridView>
+            </ListView.View>
+            
+        </ListView>
+
     </Grid>
 </UserControl>
