--- a/ModelViewViewModel/App.xaml
+++ b/ModelViewViewModel/App.xaml
@@ -2,8 +2,25 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ModelViewViewModel"
+             xmlns:models="clr-namespace:ModelViewViewModel.Models"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+
+        <DataTemplate DataType="{x:Type models:Todo}" x:Key="TodoStatusTemplate">
+            <TextBlock Text="{Binding Status}" />
+        </DataTemplate>
+        
+        <DataTemplate DataType="{x:Type models:Todo}" x:Key="TodoTitleTemplate">
+            <TextBlock Text="{Binding Title}" />
+        </DataTemplate>
+        
+        <DataTemplate DataType="{x:Type models:Todo}" x:Key="TodoCreatedAtTemplate">
+            <TextBlock Text="{Binding CreatedAt}" />
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type models:Todo}" x:Key="CellTemplate">
+            <TextBlock Text="{Binding}" />
+        </DataTemplate>
 
         <Style TargetType="TextBox">
             <Setter Property="Padding" Value="5" />
@@ -46,6 +63,16 @@
                     <Setter Property="CornerRadius" Value="4" />
                 </Style>
             </Style.Resources>
+        </Style>
+
+        <Style x:Key="Navigation" TargetType="{x:Type TextBlock}">
+            <Setter Property="Padding" Value="5" />
+            <Setter Property="Margin" Value="5" />
+        </Style>
+
+        <Style TargetType="TreeView">
+            <Setter Property="Margin" Value="5" />
+            <Setter Property="BorderThickness" Value="1" />
         </Style>
 
     </Application.Resources>
